--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="images/1.png" class="d-block w-100 banner_img_wh" alt="..." />
+                            <img src="./images/1.png" class="d-block w-100 banner_img_wh" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="images/2.png" class="d-block w-100 banner_img_wh" alt="..." />
+                            <img src="./images/2.png" class="d-block w-100 banner_img_wh" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="images/3.png" class="d-block w-100 banner_img_wh" alt="..." />
+                            <img src="./images/3.png" class="d-block w-100 banner_img_wh" alt="..." />
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -194,7 +194,7 @@
             <div class="row d-flex justify-content-center gapes">
                 <div class="col-md-5">
                     <div class="card bg-dark text-white">
-                        <img src="images/2.png" class="card-img" alt="...">
+                        <img src="./images/2.png" class="card-img" alt="...">
                         <div class="card-img-overlay" style="padding-top: 80px; padding-left: 30px">
                             <h5 class="card-title">Junior Program</h5>
                             <p style="color: whitesmoke;" class="card-text">Dolor sit amet consectetur. Ut urna diam
@@ -209,7 +209,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="card bg-dark text-white sports">
-                        <img src="images/3.png" class="card-img" alt="...">
+                        <img src="./images/3.png" class="card-img" alt="...">
                         <div class="card-img-overlay" style="padding-top: 80px; padding-left: 30px">
                             <h5 class="card-title">Teenager Program</h5>
                             <p style="color: whitesmoke;" class="card-text">Dolor sit amet consectetur. Ut urna diam
@@ -226,7 +226,7 @@
         </div>
 
         <div class="container card text-white" style="width: 1170px; height: 450px;">
-            <img src="images/4.png" class="card-img" alt="">
+            <img src="./images/4.png" class="card-img" alt="">
             <div class="card-img-overlay">
                 <div style="padding-top: 250px; padding-left: 30px;">
                     <h5 class="card-title">Professional Program</h5>
@@ -255,7 +255,7 @@
                     <div class="card d-flex p-3">
                         <div class="img_and_cont">
                             <div>
-                                <img src="images/5.png"
+                                <img src="./images/5.png"
                                     alt="" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             </div>
                             <div>
@@ -288,7 +288,7 @@
                     <div class="card d-flex p-3">
                         <div class="img_and_cont">
                             <div>
-                                <img src="images/6.png"
+                                <img src="./images/6.png"
                                     alt="" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             </div>
                             <div>
@@ -321,7 +321,7 @@
                     <div class="card d-flex p-3">
                         <div class="img_and_cont">
                             <div>
-                                <img src="images/7.png"
+                                <img src="./images/7.png"
                                     alt="" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             </div>
                             <div>
@@ -354,7 +354,7 @@
                     <div class="card d-flex p-3">
                         <div class="img_and_cont">
                             <div>
-                                <img src="images/8.png"
+                                <img src="./images/8.png"
                                     alt="" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             </div>
                             <div>
@@ -387,7 +387,7 @@
                     <div class="card d-flex p-3">
                         <div class="img_and_cont">
                             <div>
-                                <img src="images/9.png"
+                                <img src="./images/9.png"
                                     alt="" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             </div>
                             <div>
@@ -420,7 +420,7 @@
                     <div class="card d-flex p-3">
                         <div class="img_and_cont">
                             <div>
-                                <img src="images/10.png"
+                                <img src="./images/10.png"
                                     alt="" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             </div>
                             <div>
@@ -465,7 +465,7 @@
             <div class="card">
                 <div class="row">
                     <div class="col-md-6 p-4">
-                        <img src="images/11.png" alt="" />
+                        <img src="./images/11.png" alt="" />
                     </div>
                     <div class="col-md-6 p-3">
                         <div class="m-4">
@@ -600,19 +600,19 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="contact_color_wh">
-                        <img src="images/Group 1171275317.png" alt="">
+                        <img src="./images/Group 1171275317.png" alt="">
                         <p>Phone Number :</p>
                         <h5>(+62) 123-321-543</h5>
                     </div>
                     <br />
                     <div class="contact_color_wh1">
-                        <img src="images/Group 1171275318.png" alt="">
+                        <img src="./images/Group 1171275318.png" alt="">
                         <p>Email :</p>
                         <h5>hockeys@support.com</h5>
                     </div>
                     <br />
                     <div class="contact_color_wh2">
-                        <img src="images/Group 1171275321.png" alt="">
+                        <img src="./images/Group 1171275321.png" alt="">
                         <p>Location :</p>
                         <h5>152/1 Mohakhali Wireless Gate</h5>
                     </div>
